--- a/css/print.css
+++ b/css/print.css
@@ -1,26 +1,26 @@
 /* EAD print styles */
-.ead-toc{
-    display:none;
+.ead-toc {
+    display: none !important;
 }
 
-.ead-content .body{
-    overflow:visible !important;
-    max-height:none !important;
+.ead-content .body {
+    overflow: visible !important;
+    max-height: none !important;
 }
 
-.ead-content, .ead-whole, .ead-content, .dc-content, .dc-centercontent, body, .islandora-ead-object{
-    padding:0 !important;
-    background:none;
-    border:0;
-    margin:0;
-    max-width:none;
-    background-color:white;
+.ead-content,.ead-whole,.ead-content,.dc-content,.dc-centercontent,body,.islandora-ead-object {
+    padding: 0 !important;
+    background: none !important;
+    border: 0 !important;
+    margin: 0 !important;
+    max-width: none !important;
+    background-color: white !important;
 }
 
-.tabs, .title, #page > #theheader, .region-page-top, .dc-sidebox, .dc-box, footer#thefooter{
-    display:none;
+.tabs,.title,#page > #theheader,.region-page-top,.dc-sidebox,.dc-box,footer#thefooter, .dc-feature-bg, #block-islandora-solr-search-navigation {
+    display: none !important;
 }
 
-html{
-    color:black;
+html {
+    color: black !important;
 }
